# MuseCraft

./: .env.example  .env.local.example  .eslintrc.json  .gitattributes  .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENV_SETUP.md  LICENSE  README.md  SECURITY.md  jest.config.js  jest.runtime-gate.config.js  next.config.js  package-lock.json  package.json  start_local_server.py  tailwind.config.js  tsconfig.frontend-runtime-check.json  tsconfig.frontend-runtime-validate.json  tsconfig.json
backend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  MULTI_AGENT_COORDINATION_DESIGN.md  PHASE_2_MULTI_AGENT_SYSTEM_DESIGN.md  README.md  ai_config.yaml  alembic.ini  analyze_tool_coupling.py  docker-compose.yml  final_workflow_test.py  organize_tests.py  pyproject.toml  pytest-integration.ini  pytest.ini  requirements.txt  test_api_workflow.py  test_complete_scene_continuity_system.py  test_ffmpeg_final_frame_extraction.py  test_llm_driven_system.py  test_mas_integration.py  test_mas_memory_integration.py
backend/alembic/: env.py
backend/alembic/release_versions/: 20260711_0001_postgresql_release_baseline.py  README.md
backend/app/: __init__.py  main.py  memory_utils.py
backend/app/agents/: README.md  __init__.py  agents.md  audio_generator.py  base.py  concept_planner.py  concept_planner_old.py  enhanced_orchestrator.py  episode_orchestrator.py  episode_script_planner.py  function_call_agent_example.py  image_generator.py  orchestrator.py  quality_checker.py  react_agent.py  react_concept_planner.py  react_orchestrator.py  script_writer.py  series_planner.py  supervisor_orchestrator.py  video_composer.py  video_generator.py  voice_synthesizer.py
backend/app/api/: deps.py
backend/app/config/: context_editor_schema.yaml  llm_policies.yaml
backend/app/core/: ai_config.py  config.py  consistency_policy.py  constants.py  database.py  dependency_config.py  generation_mode.py  logging_config.py  logging_utils.py  mas_agent_adapter.py  mas_communication.py  mas_handoff_manager.py  mas_orchestrator.py  mas_result_aggregator.py  mas_task_decomposer.py  mas_task_dispatcher.py  mode_router.py  obs_strategy.py  prompt_manager.py  scene_continuity_memory.py  story_plan.py  video_config_manager.py  workflow_state.py
backend/app/events/: __init__.py  bus.py  execution.py  listeners.py  models.py  provider.py  publisher.py  setup.py  sinks.py
backend/app/models/: __init__.py  agent.py  base.py  project_workspace.py  resource.py  scene.py  task.py  workflow_runtime.py
backend/app/services/: ai_client.py  audio_delivery_gate_evaluator.py  audio_orchestration_policy.py  celery_app.py  character_identity_contract.py  character_reference_images.py  context_assembler.py  data_persistence.py  enhanced_ai_client.py  error_recovery.py  (+47 more)
backend/config/: ai_config.yaml  consistency_policy.yaml  prompt_safety.yaml  prompt_safety_rules.yaml  voice_manifest.json
backend/scripts/: activate.bat  activate.sh  cleanup_stage2_dev_files.py  dev.py  diagnose_scriptwriter.py  extract_frame.sh  extract_video_last_frame.py  inspect_memory.py  lint.py  pre_commit_check.py  project_api_smoke.py  reconcile_stale_quick_runtimes.py  reset_celery_dev_state.py  retry_suno_bgm.py  setup_database.py  setup_uv_environment.py  setup_uv_windows.bat  start_dev.py  start_dev_uv.py  test_audio_agent_react.py  test_continuity_prep.py  test_fc_prompt_image_generator.py  test_fc_prompt_video_generator.py  test_templates.py  validate_system.py  validate_uv_setup.py  verify_multi_agent_system.py
backend/tests/: README.md  README_REORGANIZED.md  conftest.py  test_ai_service_integration.py  test_ci_cd_integration.py  test_comprehensive_e2e_workflow.py  test_deployment_validation.py  test_e2e_workflow.py  test_error_recovery.py  test_error_scenarios_and_recovery.py  test_monitoring_and_health_checks.py  test_performance_benchmarks.py  test_performance_load.py  test_system_integration.py  test_system_integration_validation.py  test_websocket_integration.py
(+787 files in other folders)
