[project]
name = "short-video-maker-backend"
version = "1.0.0"
description = "AI-powered short video generation platform backend"
authors = [
    {name = "Short Video Maker Team"}
]
readme = "README.md"
requires-python = ">=3.8.1"
license = {text = "MIT"}

dependencies = [
    # FastAPI and web framework
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "websockets==12.0",
    # Database
    "sqlalchemy==2.0.23",
    "alembic==1.13.0",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    # Redis and task queue
    "redis==5.0.1",
    "celery==5.3.4",
    "flower==2.0.1",
    # AI and external APIs
    "openai==1.3.7",
    "anthropic==0.7.7",
    "requests==2.31.0",
    "httpx==0.25.2",
    "aiohttp==3.9.1",
    # File handling and media processing
    "aiofiles==23.2.1",
    "pillow==10.1.0",
    "ffmpeg-python==0.2.0",
    # Storage and cloud services
    "boto3==1.34.0",
    "botocore==1.34.0",
    "minio==7.2.0",
    "oss2==2.18.4",
    # Video and image processing
    "opencv-python==4.8.1.78",
    "moviepy==1.0.3",
    "imageio==2.33.1",
    # Authentication and security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-decouple==3.8",
    # Utilities
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-json-logger==2.0.7",
    "structlog==23.2.0",
    "tenacity==8.2.3",
    "jinja2==3.1.2",
    "pyyaml==6.0.1",
    "pymysql>=1.1.1",
    "aiomysql>=0.2.0",
    "watchdog>=4.0.2",
]

[project.optional-dependencies]
dev = [
    # Development and testing
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "factory-boy==3.3.0",
    "pytest-cov==4.1.0",
    "black==23.10.1",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.7.0",
]

test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "factory-boy==3.3.0",
    "httpx==0.25.2",
]

lint = [
    "black==23.10.1",
    "isort==5.12.0", 
    "flake8==6.1.0",
    "mypy==1.7.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["app"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "sqlalchemy.*",
    "alembic.*",
    "minio.*",
    "boto3.*",
    "cv2.*",
    "moviepy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\\\bProtocol\\\\):",
    "@(abc\\.)?abstractmethod",
]
